force-app/main/default/objects/VehicleServicePackage__c/VehicleServicePackage__c.object-meta.xml
<CustomObject>
    <label>Vehicle Service Package</label>
    <nameField>
        <displayFormat>VSP-{0000}</displayFormat>
        <label>Vehicle Service Package</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Service Package</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>