force-app/main/default/objects/VehicleServicePackage__c/fields/Validity_Until__c.field-meta.xml
<CustomField>
    <fullName>Validity_Until__c</fullName>
    <label>Validity Until</label>
    <type>Date</type>
</CustomField>