force-app/main/default/objects/VehicleServicePackage__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 13/11/2020
User Story: Gd-1223
Purpose :- After Sales service available of Customer.</description>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Vehicle Service Package</relationshipLabel>
    <relationshipName>Vehicle_Service_Package</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>